infra/sources/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __NAME__ 
  namespace: websites 
  labels:
    application: __NAME__
spec:
  type: NodePort
  selector:
    application: __NAME__
  ports:
  - port: 80
    targetPort: 80
